carousel adjusts to height properly

--- a/frontend/src/components/modal/edit_modal.css
+++ b/frontend/src/components/modal/edit_modal.css
@@ -1,12 +1,11 @@
 .edit-modal {
     max-height: calc(100vh - 80px);
-    /* width: fit-content; */
     overflow-y: auto;
     position: relative;
-    top: calc(100% - 84vh);
     padding: 10px 20px;
     border-radius: 6px;
     margin: 0 auto;
+    max-width: 600px;
     width: min(90vmax, 90vmin);
     height: auto;
     background-color: rgb(61, 61, 61);
