--- a/frontend/src/components/recommender/game_dart_start.css
+++ b/frontend/src/components/recommender/game_dart_start.css
@@ -23,7 +23,7 @@
   /* font-family: 'Lato', sans-serif; */
   font-weight:lighter;
   border-radius: 15px;
-  padding: 30px;
+  padding: 60px;
   width: 84%;
   text-align: center;
   position: relative;
@@ -62,6 +62,10 @@
   100% {opacity:1;}
 }
 
+.game-dart-text {
+  margin-top: -20px;
+  margin-bottom: 7px;
+}
 
 .game-dart-instructions h2 {
   padding: 5px;
@@ -73,18 +77,22 @@
   font-size: 1em;
 }
 
-.game-dart-instructions input{
-  background-color: rgb(44, 44, 44);
-  width: 30%;
-  margin: 5px 0;
-  padding: 10px 10px;
+#start-button {
+  position: relative;
+  top: 25px;
+  background-color: rgb(221, 40, 40);
+  padding: 12px 80px;
+  font-weight: 600;
+  transition: all 500ms cubic-bezier(0.25, 0.46, 0.45, 0.94) 0s !important;
   font-size: larger;
   border-radius: 8px;
-  border-color: transparent;
+  /* border-color: transparent; */
   color: white;
+  margin: 5px 0;
+  width: 30%;
 }
 
-.game-dart-instructions:hover input{
+#start-button:hover {
   cursor: pointer;
   background-color: rgb(255, 59, 59);
   transition: all 0.4s ease 0s;
