--- a/frontend/src/components/session/signup.css
+++ b/frontend/src/components/session/signup.css
@@ -30,6 +30,14 @@
   font-size: clamp(16px, 0.9vw, 0.9vw);
 }
 
+input[type=submit] {
+  border: none;
+  background-color: rgb(230, 50, 50);
+  color: white;
+  padding: 16px 32px;
+  text-decoration: none;
+}
+
 #submit-button {
   margin-top: 10px !important;
 }
