Adjust menu text for mobile

--- a/frontend/src/components/nav/navbar.css
+++ b/frontend/src/components/nav/navbar.css
@@ -20,7 +20,7 @@
 
 #nav-logo img {
   width: 200px;
-  margin-left: 5vw;
+  margin-left: 4vw;
 }
 
 #splash-nav-logo img {
@@ -112,9 +112,9 @@
 }
 
 #user-menu {
-  font-size: clamp(15px, 1.8vw, 1.8vw);
+  font-size: clamp(20px, 1.8vw, 1.8vw);
   cursor: pointer;
-  padding: 0 20px;
+  padding-left: 10px;
 }
 
 #nav-logo-link {
